<resources>
    <string name="app_name">Airella</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Airella</string>
    <string name="nav_header_subtitle">Air quality app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="menu_home">Stations</string>
    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="prompt_ssid">WIFI name</string>
    <string name="prompt_wifi_password">WIFI password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="action_save">Save</string>
    <string name="action_continue">Continue</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="invalid_password_confirm">Passwords must match</string>
    <string name="title_activity_register">Register</string>
    <string name="register_success">Registration successful</string>

    <string name="action_wifi_config">Configure WiFi</string>
    <string name="action_change_password">Change password</string>
    <string name="new_password">New Password</string>

    <string name="logout">Logout</string>


    <string name="login_failed_error">"Invalid email or password"</string>
    <string name="internet_error">"Check your internet connection"</string>
    <string name="internal_error">"Internal error. Try again later"</string>
    <string name="unexpected_error">"Unexpected Error"</string>
    <string name="location_permission_required_scan">Location permission is required to scan Bluetooth devices</string>

    <string name="status_label">"Status: "</string>
    <string name="bond_device">Bond with device</string>
    <string name="clear_data">Clear data</string>
    <string name="location_required_rejected">You must allow Location permission to scan nearby BT devices</string>
    <string name="turn_on_bluetooth">Turn on Bluetooth</string>
    <string name="turn_on_bluetooth_long">Please turn on Bluetooth in order to connect to station</string>
    <string name="turn_on_location">Turn on location</string>
    <string name="turn_on_location_long">Please turn on Location in order to scan for Bluetooth devices</string>
    <string name="search_for_station">Search for station</string>
    <string name="enable_internet_to_show_your_stations">Enable Internet to show your stations</string>
    <string name="register_stations_to_see_them">Register stations to see them here</string>
    <string name="choose_wifi_network">Choose WiFi network</string>
    <string name="set_additional_info">Set additional information</string>
    <string name="continue_text">Continue</string>
    <string name="configure_station">Configure station</string>
    <string name="set_station_location">Set station location</string>
    <string name="your_location">Your location:</string>
    <string name="refresh_location">Refresh location</string>
    <string name="set_location_manually">Set location manually</string>
    <string name="logo">Logo</string>
    <string name="station_name">Station name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="house_number">Number</string>
    <string name="set_location">Set location</string>
    <string name="set_address">Set address</string>
    <string name="register_station">Register station</string>
    <string name="wifi">WiFi</string>
    <string name="type_password">Type password:</string>
    <string name="remove_station">Remove station from profile</string>
    <string name="station_aqi_1">AQI: %1$s</string>
    <string name="icon">icon</string>
    <string name="station_summary">Station summary</string>
    <string name="set_custom_api_url">Set custom api url</string>
    <string name="station_name_label">Station name:</string>
    <string name="wifi_label">WiFi:</string>
    <string name="wifi_ssid_label">WiFi name:</string>
    <string name="address_label">Address:</string>
    <string name="location_label">Location:</string>
    <string name="back">Back</string>
    <string name="choose_station_name">Choose station name</string>
    <string name="configuration_in_progress">Configuration in progress</string>
    <string name="configuration_successful">Configuration successful</string>
    <string name="success">Success!</string>
    <string name="station_was_setup_successfully">Station was setup successfully!</string>
    <string name="station_setup_failed">Station setup failed!</string>
    <string name="registration_in_progress">Registration in progress</string>
    <string name="registration_successful">Registration successful</string>
    <string name="choose_internet_connection">Connect station to Internet</string>
    <string name="gsm">GSM</string>
    <string name="apn">APN</string>
    <string name="gsm_username">Username</string>
    <string name="gsm_password">Password</string>
    <string name="gsm_extender_url">GSM Extender URL</string>
    <string name="configure_gsm">Configure GSM</string>
    <string name="connection_type">Connection type:</string>
    <string name="bond_with_device_in_order_to_configure_it">Bond with device in order to configure it</string>
    <string name="apn_configuration">APN configuration</string>
    <string name="how_to_connect_station_to_internet">How do you want to connect station to Internet?</string>
    <string name="add_station">Add station</string>
    <string name="configure_station_via_bluetooth">Configure station\nvia Bluetooth</string>
    <string name="failed">Failed</string>
    <string name="registered">Registered</string>
    <string name="api_connection">API Connection</string>
    <string name="configure">Configure</string>
    <string name="status">Status</string>
    <string name="air_sensor">Air sensor</string>
    <string name="gps">Gps</string>
    <string name="heater">Heater</string>
    <string name="power_sensor">Power sensor</string>
    <string name="weather_sensor">Weather sensor</string>
    <string name="airella_gsm_extender_url">https://gsm-extender.airella.cyfrogen.com/</string>
    <string name="retry">Retry</string>
    <string name="wifi_connect_failed">Connection to WiFi failed</string>
    <string name="station_internet_connection_failed">Station failed to connect to Internet</string>
    <string name="bt_connection_failed">Bluetooth connection error</string>
    <string name="registration_failed">Registration failed</string>
    <string name="clear_data_failed">Failed to clear data</string>
    <string name="clear_data_progress">Clearing data in progress</string>
    <string name="clear_data_success">Successfully cleared data</string>
    <string name="gsm_disabled_registration">GSM is currently disabled\n for station registration</string>
    <string name="aqi">AQI</string>
    <string name="location">Location</string>
    <string name="location_2">%1$.4f., %2$.4f.</string>
</resources>
