<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.permission.BluetoothEnableFragment">

    <org.airella.airella.ui.template.HeaderTemplate
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:image="@drawable/ic_phonelink_setup_white_70dp"
        app:text="@string/choose_internet_connection" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.45">

        <Button
            android:id="@+id/wifi_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_outline_settings_gray_50dp"
            android:text="@string/wifi"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/gsm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_outline_settings_gray_50dp"
            android:text="@string/gsm"
            android:textColor="@android:color/black" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
